--- a/CSE-3311/form.html
+++ b/CSE-3311/form.html
@@ -1,32 +1,29 @@
-<link rel="stylesheet" href="style-form.css" />
-<div class="container">
-  <form action="action_page.php">
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name.." />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style-form.css" />
+    <title>Form</title>
+  </head>
+  <body>
+    <div class="container">
+      <form action="action_page.php">
+        <label for="fname">Project Name</label>
+        <input type="text" placeholder="Your Project Name" />
 
-    <label for="lname">Last Name</label>
-    <input
-      type="text"
-      id="lname"
-      name="lastname"
-      placeholder="Your last name.."
-    />
+        <label for="Address">Address</label>
+        <input type="text" placeholder="Address of the Project" />
 
-    <label for="country">Country</label>
-    <select id="country" name="country">
-      <option value="australia">Australia</option>
-      <option value="canada">Canada</option>
-      <option value="usa">USA</option>
-    </select>
+        <label for="Manager">Project Manager</label>
+        <input type="text" placeholder="Name of Project Manager" />
 
-    <label for="subject">Subject</label>
-    <textarea
-      id="subject"
-      name="subject"
-      placeholder="Write something.."
-      style="height: 200px"
-    ></textarea>
+        <label for="Material">Matirials Used</label>
+        <input type="text" placeholder="Name of Materials Used" />
 
-    <input type="submit" value="Submit" />
-  </form>
-</div>
+        <input type="submit" value="Submit" />
+      </form>
+    </div>
+  </body>
+</html>
