--- a/CSE-3311 Project/form.html
+++ b/CSE-3311 Project/form.html
@@ -8,20 +8,23 @@
     <title>Form</title>
   </head>
   <body>
+    <div class="Form">
+      <h1>Project Form</h1>
+    </div>
     <div class="container">
       <form action="action_page.php">
-        <label for="fname">Project Name</label>
+        <label for="fname">Project Name &emsp;</label>
         <input type="text" placeholder="Your Project Name" />
-
-        <label for="Address">Address</label>
+        <br />
+        <label for="Address">Address &emsp;&emsp;&ensp;&ensp;</label>
         <input type="text" placeholder="Address of the Project" />
-
+        <br />
         <label for="Manager">Project Manager</label>
         <input type="text" placeholder="Name of Project Manager" />
-
-        <label for="Material">Matirials Used</label>
+        <br />
+        <label for="Material">Matirials Used &ensp;</label>
         <input type="text" placeholder="Name of Materials Used" />
-
+        <br />
         <input type="submit" value="Submit" />
       </form>
     </div>
