--- a/CSE-3311 Project/form.html
+++ b/CSE-3311 Project/form.html
@@ -12,21 +12,28 @@
       <h1>Project Form</h1>
     </div>
     <div class="container">
-      <form action="action_page.php">
-        <label for="fname">Project Name &emsp;</label>
-        <input type="text" placeholder="Your Project Name" />
+      <form action="" id="Form">
+        <div class="alert">Form sent</div>
+        <label for="Pname">Project Name &emsp;</label>
+        <input type="text" id="ProjectName" placeholder="Your Project Name" />
         <br />
         <label for="Address">Address &emsp;&emsp;&ensp;&ensp;</label>
-        <input type="text" placeholder="Address of the Project" />
+        <input type="text" id="Address" placeholder="Address of the Project" />
         <br />
         <label for="Manager">Project Manager</label>
-        <input type="text" placeholder="Name of Project Manager" />
+        <input
+          type="text"
+          id="ProjectManager"
+          placeholder="Name of Project Manager"
+        />
         <br />
         <label for="Material">Matirials Used &ensp;</label>
-        <input type="text" placeholder="Name of Materials Used" />
+        <input type="text" id="MatsUsed" placeholder="Name of Materials Used" />
         <br />
         <input type="submit" value="Submit" />
       </form>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
+    <script src="server.js"></script>
   </body>
 </html>
