new commit for 3/7/2022

--- a/CSE-3311 Project/login.html
+++ b/CSE-3311 Project/login.html
@@ -5,11 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style-form.css" />
-    <title>Picaso</title>
+
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
+    <script src="/CSE-3311 Project/Login.js"></script>
+
+    <title>User Select</title>
   </head>
-  <body id="body">
+  <body background-color="#04aa6d">
     <div id="index">
-      <a href="/CSE-3311 Project/index.html">Go To Index</a>
+      <a href="index.html">Go To Index</a>
     </div>
     <div class="popForm">
       <form id="Form" class="conForm">
@@ -45,8 +54,5 @@
         <button onclick="createUser()" class="CU-btn">Create User</button>
       </form>
     </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
-    <script src="valid.js"></script>
   </body>
 </html>
