--- a/CSE-3311 Project/info.html
+++ b/CSE-3311 Project/info.html
@@ -11,6 +11,7 @@
     <!-- The top navigation bar -->
     <div class="topnav">
       <!-- The Modal -->
+      <a class="active" href="index.html"><h1>Picasso</h1></a>
       <div id="myModal" class="modal">
         <!-- Modal content -->
         <div class="modal-content">
