--- a/CSE-3311 Project/info.html
+++ b/CSE-3311 Project/info.html
@@ -11,7 +11,10 @@
     <!-- The top navigation bar -->
     <div class="topnav">
       <!-- The Modal -->
-      <a class="active" href="index.html"><h1>Picasso</h1></a>
+      <button class="active" onclick="homepage()"style="font-size:20px">Picasso</button>
+      <button class="logout" id="log_out" onclick="out()">
+        Logout
+      </button>
       <div id="myModal" class="modal">
         <!-- Modal content -->
         <div class="modal-content">
