--- a/CSE-3311 Project/login.html
+++ b/CSE-3311 Project/login.html
@@ -10,19 +10,21 @@
     <title>User Select</title>
   </head>
   <body>
-    <div class="main" id="login_div">
-      <div class = 'heading'><h1>Picasso</h1></div>
-      <!-- <div class = 'para'> <h3>Easy inventory management</h3></div> -->
+    <div class = 'heading'><h1>Picasso</h1></div>
+    <!-- <div class = 'para'> <h3>Easy inventory management</h3></div> -->
+    <div class="containerdiv">
+      <div class="main" id="login_div">        
+        <input type="email" placeholder="Email" id="email_id" />
+        <input type="password" placeholder="Password" id="password_id" />
+        <button onclick="login()">Login</button>
+        <br />
+      </div>
+      <button class="signup" id="signup_id" onclick="createNewUser()" style="display:none;">
+        Create new account
+      </button>
 
-      
-      <input type="email" placeholder="Email" id="email_id" />
-      <input type="password" placeholder="Password" id="password_id" />
-      <button onclick="login()">Login</button>
-      <br />
     </div>
-    <button class="signup" id="signup_id" onclick="createNewUser()" style="display:block;">
-      Create new account
-    </button>
+
     <div id="myModal" class="modal">
       <!-- Modal content -->
       <div class="modal-content">
