Changed password input functionality, added a new step for value input

--- a/CSE-3311 Project/index.html
+++ b/CSE-3311 Project/index.html
@@ -51,6 +51,7 @@
                   type="number"
                   id="ItemPrice"
                   placeholder="Price of the items"
+                  step="0.01"
                 />
                 <br />
                 <label for="ItemNumber">Number of Items</label><br>
