--- a/CSE-3311 Project/login.html
+++ b/CSE-3311 Project/login.html
@@ -34,12 +34,13 @@
           <h1>Sign Up Form</h1>
         </div>
         <!-- Form -->
-        <div class="container">
+        <div class="container" id="signup_dev">
           <form action="" id="Form">
               <input type="text" placeholder="First Name" id="fname" />
               <input type="text" placeholder="Last Name" id="lanme" />
               <input type="email" placeholder="Email" id="email" />
-              <input type="password" placeholder="Password" id="password" />
+              <input type="password" placeholder="Password" id="password" required minlength="6" maxlength="255" pattern="(?=.*[0-9a-zA-Z]).{6,}"/>
+              <p class="passMIN">At least 6 characters required</p>
               <button class="signup" onclick="signup()">Sign Up</button>
 
             <!-- <input type="submit" value="Submit"></input> -->
