--- a/CSE-3311 Project/index.html
+++ b/CSE-3311 Project/index.html
@@ -14,7 +14,7 @@
       <button class="active" style="font-size:20px">Picasso</button>
       <!-- Form in Modal -->
       <button class="AddProject" id="myBtn">
-        <span>&#43;</span> Add Project(Modal)
+        <span>&#43;</span> Add Product
       </button>
       <button class="logout" id="log_out" onclick="out()">
         Logout
@@ -26,7 +26,7 @@
           <!-- The close button -->
           <span class="close">&times;</span>
           <div class="Form">
-            <h1>Project Form</h1>
+            <h1>Product Form</h1>
           </div>
           <!-- Form -->
           <div class="container">
