Added the Store name to the top of the page, Added a txt file with the action items we need to finish before the presentation next week.

--- a/CSE-3311 Project/index.html
+++ b/CSE-3311 Project/index.html
@@ -129,6 +129,10 @@
 
     </div>
 
+    <div id="StoreName">
+      <p class="StoreTitle" id="StoreTitle"></p>
+    </div>
+
     <br><br>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
     <script src="server.js"></script>
