Added store deletion functionality

--- a/CSE-3311 Project/index.html
+++ b/CSE-3311 Project/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Picaso</title>
+    <title>Picasso InvSys</title>
   </head>
   <body id="body">
     <!-- The top navigation bar -->
@@ -27,6 +27,9 @@
       </button>
       <button class="AddNext" id="myBtn4">
         <span></span> Next Store
+      </button>
+      <button class="AddNext" id="myBtn5">
+        <span>&#8722</span> Delete Store
       </button>
       <!-- The Modal -->
       <div id="myModal" class="modal">
