Added sorting functionality

--- a/CSE-3311 Project/index.html
+++ b/CSE-3311 Project/index.html
@@ -130,7 +130,32 @@
         </button>
       </form>
 
+      <div class="sort_div">
+        <button class="dropbtn" id="SortButton">Sorting</button>
+      </div>
     </div>
+
+    <div class="sort_in" id="sort_in">
+      <button style="position:relative; left: 0%; color: white;" id="exit-sorting">X</button>
+      <p class="Sort-title">Sorting</p>
+      <label for="Sort-title" style="color:white; width:100%;">Type</label><br>
+      <select name="Typeing" id="Type-Selection">
+        <option value="">-</option>
+        <option value="Price">Price</option>
+        <option value="Quantity">Quantity</option>
+        <option value="Aile">Aile</option>
+      </select><br>
+      <label for="Sort-title" style="color:white; width:100%;">Order</label><br>
+      <select name="Ordering" id="Order-Selection">
+        <option value="">-</option>
+        <option value="Ascending">Ascending</option>
+        <option value="Descending">Descending</option>
+      </select><br>
+      <br>
+
+      <button class="myBtn6" id="myBtn6">Apply</button>
+    </div>
+    
 
     <div id="StoreName">
       <p class="StoreTitle" id="StoreTitle"></p>
